More accurately describe the built component

--- a/lib/playground_web/controllers/autocomplete_search_controller.html.heex
+++ b/lib/playground_web/controllers/autocomplete_search_controller.html.heex
@@ -1,7 +1,7 @@
 <div class="container mx-auto my-8">
   <h1 class="text-5xl text-gray-900 text-center font-serif py-4">AutocompleteSearch Component</h1>
   <p class="text-xl text-gray-500 text-center font-serif py-4 mx-8">
-    The story of how to build a reusable, dynamic, autocomplete search component with the help of Phoenix LiveView and AlpineJS
+    A search component with autocompleting, selectable results built with the help of Phoenix LiveView, TailwindCSS, and AlpineJS
   </p>
   <%= live_component(PlaygroundWeb.AutocompleteSearchComponent,
     id: :search,
